--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -462,7 +462,13 @@
             for (var player in players) {
                 if (peer.id == player) {
                     playersConnectedList = playersConnectedList +
-                        "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        "<div class=\"player-container\">"
+                    if (players[player]["readyUp"] == true) {
+                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                    }
+                    playersConnectedList = playersConnectedList + "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div>"
                     if (players[player]["inPlay"] == true) {
@@ -470,7 +476,7 @@
                             "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-user playerStatus-button playing\"></i></div></div>"
                     } else {
                         playersConnectedList = playersConnectedList +
-                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div></div>"
+                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div>"
                     }
                 } else {
                     playersConnectedList = playersConnectedList +
