--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -411,7 +411,7 @@
 
         function showChangeName(e) {
             let showNameContainer = e.parentElement;
-            let changeNameContainer = showNameContainer.parentElement.children[1];
+            let changeNameContainer = showNameContainer.parentElement.children[2];
             showNameContainer.classList.add('no-display');
             changeNameContainer.classList.remove('no-display');
 
@@ -428,7 +428,7 @@
 
         function changeOwnName(e, playerID, newName) {
             let changeNameContainer = e.parentElement;
-            let showNameContainer = changeNameContainer.parentElement.children[0];
+            let showNameContainer = changeNameContainer.parentElement.children[1];
             changeNameContainer.classList.add("no-display");
             showNameContainer.classList.remove("no-display");
 
@@ -464,11 +464,14 @@
                     playersConnectedList = playersConnectedList +
                         "<div class=\"player-container\">"
                     if (players[player]["readyUp"] == true) {
-                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
                     } else {
-                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
                     }
-                    playersConnectedList = playersConnectedList + "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                    playersConnectedList = playersConnectedList +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div>"
                     if (players[player]["inPlay"] == true) {
@@ -479,8 +482,16 @@
                             "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div>"
                     }
                 } else {
+                    playersConnectedList = playersConnectedList + "<div class=\"player-container\">"
+                    if (players[player]["readyUp"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                    }
                     playersConnectedList = playersConnectedList +
-                        "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p></div>"
                     if (players[player]["inPlay"] == true) {
