--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -469,11 +469,14 @@
                     playersConnectedList = playersConnectedList +
                         "<div class=\"player-container\">"
                     if (players[player]["readyUp"] == true) {
-                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
                     } else {
-                        playersConnectedList = playersConnectedList + "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
                     }
-                    playersConnectedList = playersConnectedList + "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                    playersConnectedList = playersConnectedList +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div>"
                     if (players[player]["inPlay"] == true) {
@@ -484,8 +487,16 @@
                             "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div>"
                     }
                 } else {
+                    playersConnectedList = playersConnectedList + "<div class=\"player-container\">"
+                    if (players[player]["readyUp"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                    }
                     playersConnectedList = playersConnectedList +
-                        "<div class=\"player-container\"><div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p></div>"
                     if (players[player]["inPlay"] == true) {
