--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -356,8 +356,7 @@
                     return t;
                 };
 
-                message.innerHTML = message.innerHTML + "<br><span class=\"msg-time\">" + h + ":" + m + ":" +
-                    "</span>  -  " + msg;
+                message.innerHTML = message.innerHTML + "<br>" + msg;
                 message.scrollTop = message.scrollHeight;
             }
 
@@ -406,7 +405,7 @@
                         }]);
                     }
                     console.log("Sent: " + msg)
-                    addMessage("<span" + " style=\"color:" + players[peer.id]["colour"] + ";\" class=\"selfMsg\">" + clientPlayerName + ": </span>" + msg);
+                    addMessage("<span" + " style=\"color:" + players[peer.id]["colour"] + ";\" class=\"selfMsg\">" + clientPlayerName + "</span>" + msg);
                 } else {
                     console.log('Connection is closed');
                 }
