--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -405,7 +405,7 @@
                         }]);
                     }
                     console.log("Sent: " + msg)
-                    addMessage("<span" + " style=\"color:" + players[peer.id]["colour"] + ";\" class=\"selfMsg\">" + clientPlayerName + "</span>" + msg);
+                    addMessage("<span" + " style=\"color:" + players[peer.id]["colour"] + ";\" class=\"selfMsg\">" + clientPlayerName + ": </span>" + msg);
                 } else {
                     console.log('Connection is closed');
                 }
