--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -299,7 +299,9 @@
                             break;
                         default:
                             console.log(data)
-                            addMessage("<span" + " style=\"color:" + players[data[1]["playerID"]]["colour"] + ";\" class=\"peerMsg\">" + data[1]["playerName"] + " </span>" +
+                            addMessage("<span" + " style=\"color:" + players[data[1]["playerID"]][
+                                "colour"] + ";\" class=\"peerMsg\">" + data[1]["playerName"] +
+                                " </span>" +
                                 data[1]["msg"]);
                             break;
                     };
@@ -343,7 +345,7 @@
                     return t;
                 };
 
-                message.innerHTML = message.innerHTML + msg;
+                message.innerHTML = message.innerHTML + "<br>" + msg;
                 message.scrollTop = message.scrollHeight;
             };
 
@@ -476,7 +478,7 @@
             for (var player in players) {
                 if (peer.id == player) {
                     playersConnectedList = playersConnectedList +
-                        "<div class=\"player-container\">"
+                        "<div style=\"color: " + players[player]["colour"] + ";\" class=\"player-container\">"
                     if (players[player]["readyUp"] == true) {
                         playersConnectedList = playersConnectedList +
                             "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
@@ -485,7 +487,8 @@
                             "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
                     }
                     playersConnectedList = playersConnectedList +
-                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p style=\"color: " + players[
+                            player]["colour"] + ";\" class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div>"
                     if (players[player]["inPlay"] == true) {
@@ -496,7 +499,7 @@
                             "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div>"
                     }
                 } else {
-                    playersConnectedList = playersConnectedList + "<div class=\"player-container\">"
+                    playersConnectedList = playersConnectedList + "<div style=\"color:" + +"class=\"player-container\">"
                     if (players[player]["readyUp"] == true) {
                         playersConnectedList = playersConnectedList +
                             "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
@@ -505,7 +508,8 @@
                             "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
                     }
                     playersConnectedList = playersConnectedList +
-                        "<div id=\"showName-container\"class=\"showName-container\"><p class=\"player-name-text\">" +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p style=\"color: " + players[
+                            player]["colour"] + ";\" class=\"player-name-text\">" +
                         players[player]["playerName"] +
                         "</p></div>"
                     if (players[player]["inPlay"] == true) {
