--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -35,9 +35,6 @@
 
     <div class="Main">
         <div id="lobby-slide" class="slide">
-            <div class="main-top">
-                <h2 class="game-title">Caption It</h2>
-            </div>
             <div class="Main-mid-container">
                 <br>
                 <div id="player-list">
@@ -255,7 +252,8 @@
                         "playerName": clientPlayerName,
                         "playerID": peer.id,
                         "inPlay": true,
-                        "caption": "NA"
+                        "caption": "NA",
+                        "score": 0
                     }]);
 
                     // Check URL params for comamnds that should be sent immediately
