--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="no-displayMobile">
         <div class="top-container unselectable">
             <p class="share-link-prompt-text">Share this link to invite others. (click to copy)</p>
             <div id="receiver-id" onclick="copyShareLink()" title="Copy this link and send it to your friends.">
