--- a/CaptionIt/host.html
+++ b/CaptionIt/host.html
@@ -83,7 +83,7 @@
             <button id="submit-caption">Submit Caption</button>
         </div>
 
-        <div id="takeVote" class="slide">
+        <div id="takeVote" class="slide no-display">
             <img id="vote-random-pic" class="random-picture" src="https://media.self.com/photos/5d5da0c07ccc7b00097e8fdd/4:3/w_2560%2Cc_limit/Faith-043.jpg" alt="Random picture" />
             <div class="caption-list">
                 <div class="caption">
@@ -101,8 +101,16 @@
             </div>
         </div>
 
-        <div id="announceWinner" class="slide no-display">
-
+        <div id="announceWinner" class="slide">
+            <h5 style="font-weight: bold;">Scores</h5>
+            <br>
+            <div class="score-list">
+                <!-- Player scores will be displayed here -->
+                <div class="score-player-container">
+                    <p clas="score-player-name">Host</p>
+                    <p class="player-score">0</p>
+                </div>
+            </div>
         </div>
     </div>
 
