--- a/PAAL-lost-rewards-calculator/PAAL-lost-rewards-calculator.html
+++ b/PAAL-lost-rewards-calculator/PAAL-lost-rewards-calculator.html
@@ -93,7 +93,7 @@
         <img src="./paal-logo.png" alt="PAAL Logo" class="logo">
     </div>
 
-    <h2>CALCULATE YOUR LOST PAAL TOKENS</h2>
+    <h2>CALCULATE YOUR LOST $PAAL TOKENS</h2>
 
     <input type="text" id="walletAddress" placeholder="Public Wallet Address">
     <input type="text" id="ethApiKey" placeholder="Etherscan API Key">
